--- a/src/KursovaRabota/KursovaRabota/appsettings.json
+++ b/src/KursovaRabota/KursovaRabota/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=OlympiadSystem; User Id=sa; Password=Jvy0r00c!; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=192.168.10.110; Database=OlympiadSystem; User Id=sa; Password=Jvy0r00c!; TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
